host added to opensearch values

--- a/charts/opensearch/values.yaml
+++ b/charts/opensearch/values.yaml
@@ -60,6 +60,7 @@ opensearch:
 opensearch-dashboards:
   image:
     repository: opensearchproject/opensearch-dashboards
+  opensearchHosts: "https://opensearch-cluster-master:9200"
   enabled: true
   ingress:
     enabled: false
