--- a/charts/opensearch/values.yaml
+++ b/charts/opensearch/values.yaml
@@ -2,6 +2,7 @@ opensearch:
   image:
     repository: opensearchproject/opensearch
   enabled: true
+  replicas: 1
   config:
     opensearch.yml: |
       cluster.name: opensearch-cluster
